add 1 js -EventListener 2 -AJAX 3 fix HTML

--- a/cmd/Home.html
+++ b/cmd/Home.html
@@ -37,5 +37,14 @@
         </form>
     </div>
 </body>
+
+<script>
+    document.addEventListener("submit", function (n){
+        event.preventDefault()
+        console.log(34)
+    })
+
+</script>
+
 </html>
 
